--- a/react-app-with-webpack/public/index.html
+++ b/react-app-with-webpack/public/index.html
@@ -6,7 +6,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="withheadless" />
+        <meta name="keywords" content="AEM Adaptive Forms, Dynamic Forms, Interactive Forms, Mobile Forms, Responsive Forms, Smart Forms, Intelligent Forms, Conditional Forms, Progressive Forms, JSON Based Form, Headless Form">
+        <meta name="description" content="AEM Headless Adaptive Form"/>
         <title>Headless React form - Sample</title>
     </head>
     <body class="page basicpage">
